--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --dark-blue: #05386B;
+  --teal: #379683;
+  --bright-green: #5CDB95;
+  --light-green: #8EE4AF;
+  --off-white: #EDF5E1;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +13,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--off-white);
+  color: var(--dark-blue);
+}
+
+.container {
+  max-width: 1440px;
 }
 
 code {
@@ -30,4 +44,9 @@ code {
 
 .alert-fade-exit-active {
   opacity: 0;
+}
+h1, h2, h3 {
+  font-family: 'Anton', sans-serif;
+  text-transform: uppercase;
+  color: var(--dark-blue);
 }
